--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -1,3 +1,4 @@
+{% load url from future %}
 {% load staticfiles %}
 
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -54,8 +55,8 @@
 			<div class="grid_12">
 				<div style="font-size:80px;color:black;float:left;vertical-align:bottom"><a href="index.html">tomonotomo</a></div>
 				<div class="links">
-					{% if user.userid %}
-						<a href="#">{{ user.first_name }}</a> - <a href="{% url "socialauth_disconnect" "facebook" %}">Logout</a>
+					{% if user.id %}
+						{{ user.first_name }} - <a href="{% url "socialauth_disconnect" "facebook" %}">Logout</a>
 					{% else %}
 						Have an account? <a href="#">Sign in</a> or <a href="#">Sign up</a>
 					{% endif %}
@@ -63,6 +64,7 @@
 				<div class="clear"></div>
 			</div>
 		</div>
+    <!--
 		<div class="container_12">
 			<div class="grid_12">
 				<div class="menu_block">
@@ -79,6 +81,7 @@
 				</div>
 			</div>
 		</div>
+	-->
 		<div class="container_12">
 			<div class="grid_12">
 			 
