--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -18,8 +18,10 @@
 		</div>
 		<div class="grid_4">
 			<h2>Connect with Friends of Friends only</h2>
-			<a href="{% url "socialauth_begin" "facebook" %}" class="btn"><h3 style="color:white">Connect via Facebook</h3></a><br/><br/>
-			<h3>We hate spammers!<br/>We do not post anything on your wall</h3>
+			{% if not user.id %}
+                <a href="{% url "socialauth_begin" "facebook" %}" class="btn"><h3 style="color:white">Connect via Facebook</h3></a><br/><br/>
+                <h3>We hate spammers!<br/>We do not post anything on your wall</h3>
+            {%  endif %}
 		</div>
 	</div>
 </div>
