--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -64,10 +64,10 @@
 			<div class="container_12">
 				<div class="grid_4">
 					<div>
-						<a href="javascript:tntaction({{fbid}},1)" class="btn friendbtn">Ask friend for Introduction</a><br/><br/>
-						<a href="javascript:tntaction({{fbid}},2)" class="btn friendbtn">Connect directly</a><br/><br/>
-						<a href="javascript:tntaction({{fbid}},3)" class="btn friendbtn">Cute, but don't connect</a><br/><br/>
-						<a href="javascript:tntaction({{fbid}},4)" class="btn friendbtn">Pass, and never show</a><br/><br/>
+						<a href="tntAction/{{ fbid }}/1" class="btn friendbtn">Ask friend for Introduction</a><br/><br/>
+						<a href="tntAction/{{ fbid }}/2" class="btn friendbtn">Connect directly</a><br/><br/>
+						<a href="tntAction/{{ fbid }}/3" class="btn friendbtn">Cute, but don't connect</a><br/><br/>
+						<a href="tntAction/{{ fbid }}/4" class="btn friendbtn">Pass, and never show</a><br/><br/>
 					</div>
 				</div>
 				<div class="grid_4">
