--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -21,7 +21,11 @@
 			{% if not user.id %}
                 <a href="{% url "socialauth_begin" "facebook" %}" class="btn"><h3 style="color:white">Connect via Facebook</h3></a><br/><br/>
                 <h3>We hate spammers!<br/>We do not post anything on your wall</h3>
-            {%  endif %}
+            {% else %}
+                <a href="{% url 'loggedin' %}" class="btn"><h3 style="color:white">Start Exploring</h3></a><br/><br/>
+            {% endif %}
+
+
 		</div>
 	</div>
 </div>
