Bug resolving for second person logging in

--- a/tomonotomo/templates/tomonotomo/about.html
+++ b/tomonotomo/templates/tomonotomo/about.html
@@ -8,7 +8,7 @@
 		
 		<div class="grid_12">
 
-			We are in stealth mode. We are revolutionising the way dating happens.
+			We have just started up. We are revolutionising the way dating happens.
 			<br/><br/>
 			Why traditional dating does not work?<br/><br/>
 			<ul class="list">
