--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -18,6 +18,7 @@
 		</div>
 		<div class="grid_4">
 			<h2>Connect with Friends of Friends only</h2>
+            <h3>We are revolutionising the way dating happens. Be a part of it.</h3><br/>
 			{% if not user.id %}
                 <a href="{% url "socialauth_begin" "facebook" %}" class="btn"><h3 style="color:white">Connect via Facebook</h3></a><br/><br/>
                 <h3>We hate spammers!<br/>We do not post anything on your wall</h3>
