--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -57,11 +57,13 @@
 			<div class="container_12">
 				<div class="grid_4">
 					<div>
-						<a href="tntAction/{{ fbid }}/1" class="btn friendbtn">Ask friend for Introduction</a><br/><br/>
-						<a href="tntAction/{{ fbid }}/2" class="btn friendbtn">Connect directly</a><br/><br/>
-						<a href="tntAction/{{ fbid }}/3" class="btn friendbtn">Cute, but don't connect</a><br/><br/>
-						<a href="tntAction/{{ fbid }}/4" class="btn friendbtn">Pass, and never show</a><br/><br/>
-					</div>
+                        {% if user.id %}
+						<a href="tntAction/{{ fbid }}/1" class="btn friendbtn"><h3 style="color:white">Ask friend for Introduction</h3></a><br/><br/>
+						<a href="tntAction/{{ fbid }}/2" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
+						<a href="tntAction/{{ fbid }}/3" class="btn friendbtn"><h3 style="color:white">Cute, but don't connect</h3></a><br/><br/>
+						<a href="tntAction/{{ fbid }}/4" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
+					    {% endif %}
+                    </div>
 				</div>
 				<div class="grid_4">
 					<div>
