Added more to do

--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -13,6 +13,11 @@
 
 </style>
 
+<!-- TODO: Facebook open graph tags for sharing
+TODO: Connect directly link does not work always
+TODO: DO server logging and analytics
+TODO: Set up www.tomonotomo.com
+-->
 
 <div class="page1_block">
 
