--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -103,7 +103,7 @@
 <footer>
 	<div class="container_12">
 		<div class="grid_12">
-			Tomonotomo © 2013 • <a href="http://livedemo00.template-help.com/wt_43688/index-6.html">Privacy Policy</a> 
+			Tomonotomo © 2013 • <a href="#">Privacy Policy</a> 
 		</div>
 	</div>
 </footer>
