--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -14,6 +14,7 @@
 </style>
 
 <!-- TODO: Facebook open graph tags for sharing
+TODO: Change deending on the feedback by him or her
 -->
 
 <div class="page1_block">
