--- a/tomonotomo/templates/tomonotomo/about.html
+++ b/tomonotomo/templates/tomonotomo/about.html
@@ -1,6 +1,8 @@
 {% extends "tomonotomo/base.html" %}
 {% load staticfiles %}
 
+{% load simple_open_graph %}
+
 {% block bodycontent %}
 
 <div class="page1_block">
