Automata for love graph made

--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -61,12 +61,29 @@ TODO: Change deending on the feedback by him or her
 				<div class="grid_4">
 					<div>
                         {% if user.id %}
-						<a href="tntAction/{{ fbid }}/1/0" class="btn friendbtn"><h3 style="color:white">Ask friend for Introduction</h3></a><br/><br/>
-						<a href="tntAction/{{ fbid }}/2/0" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
-						<a href="tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Cute, but don't connect</h3></a><br/><br/>
-						<a href="tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
+						<a id="feedback1" href="../tntAction/{{ fbid }}/1/0" class="btn friendbtn"><h3 style="color:white">Ask friend for Introduction</h3></a><br/><br/>
+						<a id="feedback2" href="../tntAction/{{ fbid }}/2/0" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
+						<a id="feedback3" href="../tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Cute, but don't connect</h3></a><br/><br/>
+						<a id="feedback4" href="../tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
 					    {% endif %}
                     </div>
+
+                    <script type="text/javascript">
+                        // TODO: Check on why its not working
+                        // TODO: Check og tag title in friend page
+
+                        $(document).ready(function() {
+                            {% for deactivate in deactivateList %}
+                                $("#feedback".concat(({{ deactivate }}).toString())).addClass("disabled");
+                            {% endfor %}
+                        }
+                    </script>
+                    <div>
+                            {% for info in infoList %}
+                                <span>{{ info }}</span><br/>
+                            {% endfor %}
+                    </div>
+
 				</div>
 				<div class="grid_4">
 					<div>
