--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -21,6 +21,7 @@
 <script src="{% static 'tomonotomo/js/jquery.kwicks-1.5.1.js' %}" type="text/javascript"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.horizontalNav.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.flexslider.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}"></script>
 <script>
   $(window).load(function() { 
 		$('.full-width').horizontalNav({});
