--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -16,6 +16,41 @@
         cursor: default;
 	}
 
+    #lean_overlay {
+
+        width: 404px;
+        padding-bottom: 2px;
+        display:none;
+        background: #FFF;
+        border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+        box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7);
+        max-height:400px;
+        overflow-y:scroll;
+    }
+
+    #lean_overlay-header { padding: 18px 18px 14px 18px; border-bottom: 1px solid #CCC; border-top-left-radius: 5px; -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-right-radius: 5px; -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; }
+    #lean_overlay-header  h2 { color: #444; font-size: 1.8em; font-weight: 700; margin-bottom: 3px; text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5); }
+    #lean_overlay-header  p { color: #444; font-size: 1.3em; margin: 0; text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5); text-shadow: none; }
+    #lean_overlay-body { padding: 18px 18px 14px 18px; -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; }
+
+    div.reqfriend {
+        margin-bottom: 10px;
+        height: 40px;
+        padding-bottom: 20px;
+        padding-left: 5px;
+        padding-top: 5px;
+    }
+
+    img.reqfriend {
+        height: 30px;
+        width: 30px;
+        padding: 2px;
+    }
+
+    div.reqfriend:hover {
+        background: #eb7e8d;
+    }
+
 </style>
 
 <div class="page1_block">
@@ -72,6 +107,7 @@
                     <script type="text/javascript">
 
                         $(window).load(function() {
+                           $('a[rel*=leanModal]').leanModal({ top : 80, closeButton: ".modal_close" });
                             {% for deactivate in deactivateList %}
                                 $("#feedback".concat(({{ deactivate }}).toString())).addClass("inactivebtn");
                                 $("#feedback".concat(({{ deactivate }}).toString())).unbind("click");
@@ -93,7 +129,7 @@
 							{% if mutualfriends %}
 								<span> Mutual Friends </span>
 								{% for mutualfriend in mutualfriends %}
-									{{ mutualfriend }}<br/>
+									{{ mutualfriend.name }}<br/>
 								{% endfor %}
 							{% endif %}
 						</div>
@@ -101,6 +137,26 @@
 				</div>
 			</div>
 		</div>
+
+    <a rel="leanModal" name="lean_overlay" href="#lean_overlay">
+        ddfdffdf
+    </a>
+    <div id = "lean_overlay" style="display: block; position: fixed; opacity: 1; z-index: 11000; left: 50%; margin-left: -202px; top: 200px;">
+
+			<div id="lean_overlay-ct">
+				<div id="lean_overlay-header">
+					<h2>Ask friend for introduction</h2>
+					<a class="modal_close" href="#"></a>
+				</div>
+
+                <div id="lean_overlay-body">
+                        {% if mutualfriends %}
+                            {% for mutualfriend in mutualfriends %}
+                                <div class="reqfriend"><a href="tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><img class="reqfriend" src="http://graph.facebook.com/{{ mutualfriend.id }}/picture?type=small"></a><h4>{{ mutualfriend.name }}</h4></div>
+                            {% endfor %}
+                        {% endif %}
+                </div>
+			</div>
 
 	</div>
 </div>
