--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -18,6 +18,8 @@
 
     #lean_overlay {
 
+        z-index: 11000; left: 50%;
+        top: 60px;
         width: 404px;
         padding-bottom: 2px;
         display:none;
@@ -39,6 +41,7 @@
         padding-bottom: 20px;
         padding-left: 5px;
         padding-top: 5px;
+        border: solid #ffffff 2pt;
     }
 
     img.reqfriend {
@@ -48,7 +51,7 @@
     }
 
     div.reqfriend:hover {
-        background: #eb7e8d;
+        border: solid #eb7e8d 2pt;
     }
 
 </style>
@@ -141,7 +144,7 @@
     <a rel="leanModal" name="lean_overlay" href="#lean_overlay">
         ddfdffdf
     </a>
-    <div id = "lean_overlay" style="display: block; position: fixed; opacity: 1; z-index: 11000; left: 50%; margin-left: -202px; top: 200px;">
+    <div id="lean_overlay">
 
 			<div id="lean_overlay-ct">
 				<div id="lean_overlay-header">
@@ -152,7 +155,7 @@
                 <div id="lean_overlay-body">
                         {% if mutualfriends %}
                             {% for mutualfriend in mutualfriends %}
-                                <div class="reqfriend"><a href="tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><img class="reqfriend" src="http://graph.facebook.com/{{ mutualfriend.id }}/picture?type=small"></a><h4>{{ mutualfriend.name }}</h4></div>
+                                <div class="reqfriend"><a href="tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><img class="reqfriend" src="{% static 'tomonotomo/img/facebook-blank.png' %}"></a><h4>{{ mutualfriend.name }}</h4></div>
                             {% endfor %}
                         {% endif %}
                 </div>
