--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>connect & message directly</h2>If you do not want a mutual friend to know about your potential relationship, you can connect to him/her directly, but here again, because both the parties have explicit information regarding common friends, both the parties are disciplined due to social pressure<br>
+				<h2>connect & message directly</h2>If you do not want a mutual friend to know about your potential relationship, you can connect to him/her directly if he/she is on tomonotomo and explicitly given permission, but here again, because both the parties have explicit information regarding common friends, both the parties are disciplined due to social pressure<br>
 			</div>
 		</div>
 		<div class="grid_4">
@@ -53,47 +53,6 @@
 		<div class="grid_12">
 			<div class="hor_separator"></div>
 		</div>
-		<div class="clear"></div>
-		<div class="grid_4">
-			<div class="pad1">
-				<h2>categories</h2>
-				<ul class="list">
-					<li><a href="http://livedemo00.template-help.com/wt_43688/#">Quetsit amet euis inuctor ut liguliqu</a></li>
-					<li><a href="http://livedemo00.template-help.com/wt_43688/#">Justo dolor loboeittis euisatis und</a></li>
-					<li><a href="http://livedemo00.template-help.com/wt_43688/#">Omnis iste natus errorptate</a></li>
-					<li><a href="http://livedemo00.template-help.com/wt_43688/#">Accum dolor emque lauda</a></li>
-					<li><a href="http://livedemo00.template-help.com/wt_43688/#">Tomea ae ab illiarchitec</a></li>
-					<li class="mb0 "><a href="http://livedemo00.template-help.com/wt_43688/#">Beatanatu t odit aut </a></li>
-				</ul>
-				<a href="http://livedemo00.template-help.com/wt_43688/#" class="btn m1">More</a>
-			</div>
-		</div>
-		<div class="grid_4">
-			<div class="pad1">
-				<h2>why us?</h2>
-				<p>Ut odit aut fugit sed quia coequunagni dolores eos qui ratione vluptatem sequi nesciunuem ipsumdolor sit amet consectetuer adipis
-				cing eliaest vestibulum mole.</p>Phasellus portusce suscipit varius mi. Cum sociis natoque penatibus et magnirturientontes nascetur ridiculus mus. Nulla dui. <br>
-				<a href="http://livedemo00.template-help.com/wt_43688/#" class="btn m1">More</a>
-			</div>
-		</div>
-		<div class="grid_4">
-			<div class="pad1">
-				<h2>love stories</h2>
-				<ul class="list1">
-					<li>
-						<a href="http://livedemo00.template-help.com/wt_43688/#">Squunagni dolores eos qui ratione vluptatem sequi nesciunt. </a>
-					</li>
-					<li>
-						<a href="http://livedemo00.template-help.com/wt_43688/#">Nequem ipsumdolor sit amet couer adipiscing eliant vestib.</a>
-					</li>
-					<li>
-						<a href="http://livedemo00.template-help.com/wt_43688/#">Aenean nonummndrerit maurisellus posuscipit varius mi.</a>
-					</li>
-				</ul>
-				<a href="http://livedemo00.template-help.com/wt_43688/#" class="btn m1">More</a>
-			</div>
-		</div>
-		<div class="clear"></div>
 	</div>
 </div>
 
