--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="{% static 'tomonotomo/css/style.css' %}">
 <link media="screen" type="text/css" href="{% static 'tomonotomo/css/kwicks-slider.css' %}" rel="stylesheet">
 
+<link rel="icon" type="image/png" href="{% static 'tomonotomo/img/favicon.ico' %}">
 
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.js' %}"></script>
 <script src="{% static 'tomonotomo/js/script.js' %}"></script><meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
@@ -57,7 +58,7 @@
 	<header>
 		<div class="container_12">
 			<div class="grid_12">
-				<div style="font-size:80px;color:black;float:left;vertical-align:bottom"><a href="index.html">tomonotomo</a></div>
+				<div style="font-size:80px;color:black;float:left;vertical-align:bottom"><a href="home">tomonotomo</a></div>
 				<div class="links">
 					{% if user.id %}
 						{{ user.first_name }} - <a href="logout">Logout</a>
@@ -107,7 +108,7 @@
 <footer>
 	<div class="container_12">
 		<div class="grid_12">
-			Tomonotomo © 2013 • <a href="#">Privacy Policy</a> 
+			Tomonotomo © 2013 • <a href="home">Home</a> • <a href="about">About</a>
 		</div>
 	</div>
 </footer>
