--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -24,7 +24,7 @@
                 <br/><br/>Please get your friends to be a part of tomonotomo.<br/><br/>
                 <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a>
                 {% if degree1 >= 1 %}
-                    <br/><br/><a href="{% url "friendrandom" %}" class="btn"><h3 style="color:white">Start Anyways</h3></a>
+                    <br/><br/><a href="{% url "friendrandom" %}" class="btn btn-large"><h3 style="color:white">Start Anyway</h3></a>
                 {% endif %}    
             {% endif %}
 			</div>
