--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -106,6 +106,7 @@
 						    {% endif %}
                         <a id="feedback3" href="tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Cute, but don't connect</h3></a><br/><br/>
 						<a id="feedback4" href="tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
+				<a id="feedback5" href="friend" class="btn friendbtn"><h3 style="color:white">Skip</h3></a><br/><br/>
 					    {% endif %}
                     </div>
 
