Some copyrighting changes

--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -104,7 +104,7 @@
 						    {% if email_exists %}
                                 <a id="feedback2" href="tntAction/{{ fbid }}/2/0" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
 						    {% endif %}
-                        <a id="feedback3" href="tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Cute, but don't connect</h3></a><br/><br/>
+                        <a id="feedback3" href="tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Looks Cute/Handsome</h3></a><br/><br/>
 						<a id="feedback4" href="tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
 				<a id="feedback5" href="friend" class="btn friendbtn"><h3 style="color:white">Skip</h3></a><br/><br/>
 					    {% endif %}
