--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -48,7 +48,7 @@
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>looks cute, but don't connect</h2>You find someone cute, and you do not want to initiate the conversation and be more passive. Just indicate that you find him/her cute and we will connect you two only if he/she also finds you cute<br>
+				<h2>looks cute/handsome</h2>You find someone cute/handsome, and you do not want to initiate the conversation and be more passive. Just indicate that you find him/her cute and we will connect you two only if he/she also finds you cute<br>
 			</div>
 		</div>
 		<div class="clear"></div>
