--- a/tomonotomo/templates/tomonotomo/betathanks.html
+++ b/tomonotomo/templates/tomonotomo/betathanks.html
@@ -6,7 +6,7 @@
 <div class="page1_block">
 	<div class="container_12">
         <div class="grid_6">
-            <img src="http://www.gamedesignideas.com/wp-content/uploads/subsys-design-002.png" style="width:80%"/>
+            <img src="{%static 'tomonotomo/img/social-graph.png' %}" style="width:80%"/>
         </div>
 		<div class="grid_6">
 
