Minor copyrighting issues

--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -38,7 +38,7 @@
 
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>ask mutual friend to connect</h2>If you find someone cute, you can request one of your mutual friends to connect with him/her. Since the relationship is originated by a trusted mediator, it forces both parties to be disciplined, honest and gentle.<br>
+				<h2>ask mutual friend to connect</h2>If you find someone cute/handsome, you can request one of your mutual friends to connect with him/her. Since the relationship is originated by a trusted mediator, it forces both parties to be disciplined, honest and gentle.<br>
 			</div>
 		</div>
 		<div class="grid_4">
