--- a/tomonotomo/templates/tomonotomo/betathanks.html
+++ b/tomonotomo/templates/tomonotomo/betathanks.html
@@ -13,7 +13,7 @@
 			<h2> Thanks for signing up.. Please invite friends.. </h2>
 
             <div>
-                Thanks for signing up as a beta user. We will launch on <span style="font-size: 150%">September 5th</span>. Please check us out then.<br/><br/>
+                Thanks for signing up as a beta user. We will launch on <span style="font-size: 150%">Monday, September 2nd</span>. Please check us out then.<br/><br/>
                 You need to have at least <span style="font-size: 150%">"3"</span> friends on tomonotono so that we can build a dense social graph.
                 <br/><br/>Please get your friends to be a part of tomonotomo.<br/><br/>
                 <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a>
