--- a/tomonotomo/templates/tomonotomo/email.html
+++ b/tomonotomo/templates/tomonotomo/email.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0044)file:///home/himangshu/Desktop/2col-2-1.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         
@@ -451,7 +450,7 @@
                                             <td class="headerContent">
                                             
                                             	<!-- // Begin Module: Standard Header Image \\ -->
-                                            	<img src="file:///home/himangshu/Desktop/*%7CHEADER-IMAGE%7C*" style="max-width:600px;" id="headerImage campaign-icon" mc:label="header_image" mc:edit="header_image" mc:allowdesigner="" mc:allowtext="">
+                                            	<img src="*|HEADER-IMAGE|*" style="max-width:600px;" id="headerImage campaign-icon" mc:label="header_image" mc:edit="header_image" mc:allowdesigner="" mc:allowtext="">
                                             	<!-- // End Module: Standard Header Image \\ -->
                                             
                                             </td>
@@ -471,7 +470,7 @@
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
                                                         <td valign="top">
-                                                            <img src="file:///home/himangshu/Desktop/*%7CLEFT-IMAGE%7C*" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image00">
+                                                            <img src="*|LEFT-IMAGE|*" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image00">
                                                             <div mc:edit="tiwc300_content00">
  	                                                           <h4 class="h4">*|LEFT-TITLE|*</h4>
                                                                	*|LEFT-CONTENT|*
@@ -488,7 +487,7 @@
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
                                                         <td valign="top">
-                                                            <img src="file:///home/himangshu/Desktop/*%7CRIGHT-IMAGE%7C*" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image01">
+                                                            <img src="*|RIGHT-IMAGE|*" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01">
  	                                                           <h4 class="h4">*|RIGHT-TITLE|*</h4>
                                                                	*|RIGHT-CONTENT|*
@@ -536,7 +535,7 @@
                                                     <tbody><tr>
                                                         <td colspan="2" valign="middle" id="social">
                                                             <div mc:edit="std_social">
-                                                                &nbsp;<a href="file:///home/himangshu/Desktop/*%7CTWITTER:PROFILEURL%7C*">follow on Twitter</a> | <a href="file:///home/himangshu/Desktop/*%7CFACEBOOK:PROFILEURL%7C*">friend on Facebook</a>
+                                                                &nbsp;<a href="https://twitter.com/tomonotomo_date">follow on Twitter</a> | <a href="https://www.facebook.com/tomonotomo" target="_blank">friend on Facebook</a>
                                                             </div>
                                                         </td>
                                                     </tr>
