--- a/tomonotomo/templates/tomonotomo/email.html
+++ b/tomonotomo/templates/tomonotomo/email.html
@@ -535,7 +535,7 @@
                                                     <tbody><tr>
                                                         <td colspan="2" valign="middle" id="social">
                                                             <div mc:edit="std_social">
-                                                                &nbsp;<a href="https://twitter.com/tomonotomo_date">follow on Twitter</a> | <a href="https://www.facebook.com/tomonotomo" target="_blank">friend on Facebook</a>
+                                                                &nbsp;<a href="https://twitter.com/tomonotomo_date" target="_blank">follow on Twitter</a> | <a href="https://www.facebook.com/tomonotomo" target="_blank">friend on Facebook</a>
                                                             </div>
                                                         </td>
                                                     </tr>
